--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copyright (C) ?-2003 Ashvin Goel ashvin@users.sourceforge.net>
+Copyright (C) 1995-2000 Ashvin Goel ashvin@users.sourceforge.net>
 Copyright (C) 2009 Xavier Maillard <xma@gnu.org>.
 See the end of the file for license conditions.
 
